--- a/style/style.css
+++ b/style/style.css
@@ -87,3 +87,11 @@ form button{
     text-decoration: line-through;
     opacity:0.5 ;
 }
+.footer{
+    display: flex;
+   justify-content: center;
+   align-items: baseline;
+    font-style: italic;
+    font-size: 20px;
+   
+}
